close footer tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Rubik+One|Rubik:300,400" rel="stylesheet">
     <title>Tic Tac Toe by SB</title>
   </head>
   <body>
@@ -17,7 +18,7 @@
 
     <footer>
       <p>Designed and Developed by Stephanie Blondet</p>
-
+    </footer>
 
     <script type="text/javascript" src="app.js"></script>
   </body>
