--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Rubik+One|Rubik:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700|Permanent+Marker" rel="stylesheet">
     <title>Tic Tac Toe by SB</title>
   </head>
   <body>
@@ -12,7 +12,7 @@
 
     <h2>It's X's Turn</h2>
 
-    <button id="clear-board">Clear Board</button>
+    <button id="clear-board">clear board</button>
 
     <div id="board"></div>
 
