h2 tag switching turns

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <h1>Tic Tac Toe</h1>
 
-    <h2></h2> <!-- It's X's Turn -->
+    <h2>It's X's Turn</h2> 
 
     <button id="clear-board">clear board</button>
 
